--- a/src/App.css
+++ b/src/App.css
@@ -2,31 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +10,53 @@
   to {
     transform: rotate(360deg);
   }
+}
+/*Audio*/
+svg {
+  background-color: #ccd3d2;
+  border-radius: 5px;
+  /*cursor: ew-resize;*/
+  /*border: 1px solid lightgray;*/
+}
+
+canvas {
+  background-color: #ccd3d2;
+  cursor: ew-resize;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+}
+
+#navlist li
+{
+  display: inline-grid;
+  list-style-type: none;
+  padding-right: 20px;
+  float: left;
+}
+
+ul{
+  height:25px;
+}
+
+.clip-container{
+  border:1px solid lightgray;
+  width:70%;
+  border-radius: 5px;
+}
+
+.technique li{
+  display: inline-grid;
+  list-style-type: none;
+  margin-right: 10px;
+  float: left;
+  border-radius:3px;
+}
+
+.audio-clip{
+  height: 25px;
+  border: 1px solid snow;
+  background: lightgray;
+  padding-top:2px;
+  border-radius:3px;
+
 }
